k8s/namespace-int.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: connect-int
  labels:
    name: connect-int
    environment: integration
    tier: development
