k8s/namespace-pre.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: connect-pre
  labels:
    name: connect-pre
    environment: pre-production
    tier: staging
