k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: connect
  labels:
    name: connect
    environment: production
